--- a/Hermeco.TV.Data/Hermeco.TV.Data.csproj
+++ b/Hermeco.TV.Data/Hermeco.TV.Data.csproj
@@ -157,6 +157,7 @@
     <Compile Include="App_Start\FormatterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ConsultaHana.cs" />
     <Compile Include="Controllers\InventarioTiendasController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
